# godroll.tv-app

./: CMakeLists.txt  README.md
.github/workflows/: build-release.yml
qml/: SearchWindow.qml  WeaponItem.qml  main.qml
src/: globalhotkey.cpp  globalhotkey.h  main.cpp  seasonmapping.h  trayicon.cpp  trayicon.h  updatechecker.cpp  updatechecker.h  weaponloader.cpp  weaponloader.h  weaponsearchmodel.cpp  weaponsearchmodel.h
